--- a/cv.css
+++ b/cv.css
@@ -12,6 +12,13 @@ body {
     --page-inline-padding: 32px;
 }
 
+
+.header{
+
+    text-decoration: none;
+
+}
+
 body {
     font-family: var(--body-font);
     font-weight: 300;
@@ -95,6 +102,14 @@ ul li {
     grid-column: 2;
     grid-row: 2;
 }
+
+.Competenceshtml {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+} 
 
 .line-container {
     display: flex;
