--- a/cv.css
+++ b/cv.css
@@ -33,6 +33,12 @@ body {
 
 }
 
+.tel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 h1,
 h2,
 h3 {
@@ -79,8 +85,7 @@ ul li {
 
 .child1 {
     grid-column: 1;
-    grid-row: 1;
-       
+    grid-row: 1;       
 }
 
 
@@ -92,8 +97,7 @@ ul li {
 
 .child3 {
     grid-column: 2;
-    grid-row: 1;
-   
+    grid-row: 1;   
 }
 
 
@@ -108,58 +112,53 @@ ul li {
     display: flex;
     justify-content: center;
     align-items: center;
-
 } 
 
 .line-container {
     display: flex;
     flex-direction: column;
     justify-content: right;
-    gap: 20px;
-   
+    gap: 20px;   
 }
 
-.line1 {
-    width: 350px;
-    
+.flex-texte-ligne {
+    display: flex;
+    gap: 2rem;
+    align-items: center;
+}
+
+.line {
     height: 5px;
-    
-    background-color: #234a85;
-    
+    background-color: #31a8a8;
+}
+
+.line1 {   
+    width: 350px;    
 }
 
 .line2 {
-    width: 450px;
-
+    width:450px;
     height: 5px;
-
-    background-color: #234a85;
-
+    background-color: #31a8a8;
 }
 
 .line3 {
     width: 450px;
-
     height: 5px;
-
-    background-color: #234a85;
-
+    background-color: #31a8a8;
 }
 
 .line4 {
     width: 300px;
-
     height: 5px;
-
-    background-color: #234a85;
+    background-color: #31a8a8;
 
 }
 
 .line5{
     width: 250px;
-
     height: 5px;
+    background-color: #31a8a8;
 
-    background-color: #234a85;
 
 }
